--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "gsap": "^3.12.5",
     "mongoose": "^8.9.6",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0"
   },
